# scion-p4

./: README.md
eval/idint-osr/: plot_results.py
eval/scion-br/: .gitattributes  README.md  decompress.sh
id-int/src/: common_headers.p4  id-int.p4  internal_headers.p4
tofino-crypto/: .gitignore  Makefile.inc  README.md
tofino-crypto/aes_1pipe/: Makefile  README.md
tofino-crypto/aes_2pipes/: Makefile  README.md
tofino-crypto/cmac_1pipe/: Makefile  README.md
tofino-crypto/cmac_2pipes/: Makefile  README.md
tofino-crypto/reference/: CMakeLists.txt  README.md
tofino-crypto/reference/include/: aes.h  aes_hw.h
tofino-crypto/reference/src/: aes.c  aes_hw.c  benchmark.cpp  test.cpp
tofino-crypto/reference/tables/: gen_t_tables.py  tables.c  tables.py
tofino-epic-br/: .gitignore  README.md
tofino-epic-br/VM/: install_docker.sh  setup.sh
tofino-epic-br/controller/: README.md  controller.py  load_config.py  scion_crypto.py  tofino.py
tofino-epic-br/evaluation/: README.md  config_1seg_192.yaml  evaluation_aes_1pipe.conf  evaluation_aes_2pipe.conf  ports.json  switch_config_1seg.json
tofino-epic-br/p4src/: scion.p4
tofino-epic-br/test_infrastructure/: README.md  demo  docker-compose-demo.yaml  setup.sh
tofino-pktgen/: .gitignore  Makefile  README.md  example_config.yaml
tofino-pktgen/controller/: pktgen-cli  pktgen.py  ts_header.py
tofino-pktgen/evaluation/: config_1port.yaml  gen_epic_packet.py  gen_packets.py
tofino-pktgen/p4src/: pktgen.p4
tofino-pktgen/ptf-tests/: gen_packets.py  (+2 more)
tofino-scion-br/: .gitignore  Makefile  README.md
(+173 files in other folders)
